[devtools-blog] New blog and add contributor

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -715,6 +715,22 @@ mychaelgo:
   description:
     en: Mychael Go is Fullstack Software Engineer
 
+sadym:
+  name:
+    given: Maksim
+    family: Sadym
+  org:
+    name: Google
+    unit: Chrome
+  country: Munich
+  role:
+    - author
+  twitter: maximsadym
+  github: sadym-chromium
+  email: sadym@chromium.org
+  description:
+    en: Googler building Chrome DevTools.
+
 sgomes:
   name:
     given: Sérgio
