--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1664,7 +1664,7 @@ sadym:
   github: sadym-chromium
   email: sadym@chromium.org
   description:
-    en: Googler building Chrome DevTools.
+    en: Googler working on Chrome DevTools.
 
 nsatragno:
   name:
