--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -174,6 +174,9 @@ redirects:
 - from: /web/updates/2017/06/user-centric-performance-metrics
   to: https://web.dev/user-centric-performance-metrics/
 
+- from: /web/updates/2017/09/sensors-for-the-web
+  to: https://web.dev/generic-sensor/
+
 - from: /web/updates/2018/05/dpwa
   to: https://web.dev/progressive-web-apps/
 
