[devtools-blog] Minor update

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1649,7 +1649,7 @@ orkon:
     - author
   twitter: orkon
   github: orkon
-  email: sadalexrudenkoym@chromium.org
+  email: alexrudenkoym@chromium.org
   description:
     en: Googler working on Chrome DevTools.
 
