[devtools-blog] CSS-in-JS in DevTools (#9274)
* [devtools-blog] CSS-in-JS in DevTools

* [devtools-blog] remove link

* [devtools-blog] Minor update

* [devtools-blog] Update image to SVG

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1637,6 +1637,22 @@ pozdnyakov:
   description:
     en: Mikhail is an Engineer at Intel
 
+orkon:
+  name:
+    given: Alex
+    family: Rudenko
+  org:
+    name: Google
+    unit: Chrome
+  country: Munich
+  role:
+    - author
+  twitter: orkon
+  github: orkon
+  email: alexrudenkoym@chromium.org
+  description:
+    en: Googler working on Chrome DevTools.
+
 rupl:
   name:
     given: Chris
