--- a/src/content/en/_footer.yaml
+++ b/src/content/en/_footer.yaml
@@ -24,7 +24,7 @@ footer:
     icon_name: star
     contents:
     - label: Web on Android
-      path: /web/android/
+      path: http://developers.google.com/docs/android/
     - label: Chrome Extension Docs
       path: https://developer.chrome.com/
     - label: Site-Kit Plugin for WordPress
