--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -429,3 +429,55 @@ redirects:
 
 - from: /web/updates/2021/01/nic88
   to: https://developer.chrome.com/blog/new-in-chrome-88/
+
+## TWA Docs
+- from: /web/android/trusted-web-activity
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/overview/
+
+- from: /web/android/trusted-web-activity/quick-start
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/quick-start/
+
+- from: /web/android/trusted-web-activity/integration-guide
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/integration-guide/
+
+- from: /web/android/trusted-web-activity/lay-of-the-land
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/lay-of-the-land/
+
+- from: /web/android/trusted-web-activity/multi-origin
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/multi-origin/
+
+- from: /web/android/trusted-web-activity/query-parameters
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/query-parameters/
+
+- from: /web/android/trusted-web-activity/android-browser-helper-migration
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/android-browser-helper-migration/
+
+- from: /web/android/trusted-web-activity/web-share-target
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/web-share-target/
+
+- from: /web/android/trusted-web-activity/play-billing
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/play-billing/
+
+- from: /web/android/trusted-web-activity/receive-payments-play-billing
+  to: https://developer.chrome.com/docs/android/trusted-web-activity/receive-payments-play-billing/
+
+- from: /web/android/trusted-web-activity/whats-new
+  to: https://developer.chrome.com/docs/android/whats-new/
+
+## CustomTabs Docs
+
+- from: /web/android/custom-tabs
+  to: https://developer.chrome.com/docs/android/custom-tabs/overview/
+
+- from: /web/android/custom-tabs/implementation-guide
+  to: https://developer.chrome.com/docs/android/custom-tabs/integration-guide/
+
+- from: /web/android/custom-tabs/best-practices
+  to: https://developer.chrome.com/docs/android/custom-tabs/best-practices/
+
+- from: /web/android/custom-tabs/headers
+  to: https://developer.chrome.com/docs/android/custom-tabs/headers/
+
+## Redirects for Web-on-Android content migrated to DCC
+- from: /web/android/...
+  to: https://developer.chrome.com/docs/android/
