Add custom crux-rank-magnitude image for the updates page. Add myself as author. Add links to the CrUX BigQuery report and release notes.

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -2342,3 +2342,15 @@ maciejzasada:
     - author
   email: maciej@unit9.com
 
+johannes:
+  name:
+    given: Johannes
+    family: Henkel
+  github: powdercloud
+  org:
+    name: Google
+    unit: Software Engineer
+  country: US
+  email: johannes@google.com
+  description:
+    en: Software Engineer working on the Chrome User Experience Report at Google.
