Add Reporting Observer article to redirects.
@petele Should I also remove the WebFu article in this PR?

--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -182,6 +182,9 @@ redirects:
 
 - from: /web/updates/2018/05/first-input-delay
   to: https://web.dev/fid/
+  
+- from: /web/updates/2018/07/reportingobserver
+  to: https://web.dev/reporting-observer/
 
 - from: /web/updates/2018/11/writable-files
   to: https://web.dev/native-file-system/
